// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createReport should match snapshots 1`] = `
"<!-- jest coverage report action at  -->

## Coverage report 


| <div title=\\"Status of coverage: 🟢 - ok, 🟡 - slightly more than threshold, 🔴 - under the threshold\\">St.<sup>:grey_question:</sup></div> | Category   | Percentage | Covered / Total |
| :---------------------------------------------------------------------------------------------------------------------------------------: | :--------- | :--------- | :-------------: |
|                                                                     🟢                                                                    | Statements | 81.82%     |      27/33      |
|                                                                     🟢                                                                    | Branches   | 100%       |       8/8       |
|                                                                     🟡                                                                    | Functions  | 63.64%     |       7/11      |
|                                                                     🟢                                                                    | Lines      | 80.65%     |      25/31      |



<p align=\\"right\\">Report generated by <a href=\\"https://github.com/ArtiomTr/jest-coverage-report-action\\">🧪jest coverage report action</a> from 123456</p>
"
`;

exports[`createReport should match snapshots 2`] = `
"<!-- jest coverage report action at custom directory -->

## Coverage report for \`custom directory\`


| <div title=\\"Status of coverage: 🟢 - ok, 🟡 - slightly more than threshold, 🔴 - under the threshold\\">St.<sup>:grey_question:</sup></div> | Category   | Percentage | Covered / Total |
| :---------------------------------------------------------------------------------------------------------------------------------------: | :--------- | :--------- | :-------------: |
|                                                                     🟢                                                                    | Statements | 81.82%     |      27/33      |
|                                                                     🟢                                                                    | Branches   | 100%       |       8/8       |
|                                                                     🟡                                                                    | Functions  | 63.64%     |       7/11      |
|                                                                     🟢                                                                    | Lines      | 80.65%     |      25/31      |



<p align=\\"right\\">Report generated by <a href=\\"https://github.com/ArtiomTr/jest-coverage-report-action\\">🧪jest coverage report action</a> from 123456</p>
"
`;

exports[`createReport should match snapshots 3`] = `
"<!-- jest coverage report action at directory -->

## Custom title with directory - for \`directory\`


| <div title=\\"Status of coverage: 🟢 - ok, 🟡 - slightly more than threshold, 🔴 - under the threshold\\">St.<sup>:grey_question:</sup></div> | Category   | Percentage | Covered / Total |
| :---------------------------------------------------------------------------------------------------------------------------------------: | :--------- | :--------- | :-------------: |
|                                                                     🟢                                                                    | Statements | 81.82%     |      27/33      |
|                                                                     🟢                                                                    | Branches   | 100%       |       8/8       |
|                                                                     🟡                                                                    | Functions  | 63.64%     |       7/11      |
|                                                                     🟢                                                                    | Lines      | 80.65%     |      25/31      |



<p align=\\"right\\">Report generated by <a href=\\"https://github.com/ArtiomTr/jest-coverage-report-action\\">🧪jest coverage report action</a> from 123456</p>
"
`;
